--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,12 +18,17 @@ jobs:
         node-version: [18.x]
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8.13.1
 
     - name: Install Node.js dependencies
       run: pnpm install
