--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^33.0.1"
   }
 }
