--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
     "autoprefixer": "^10.0.1",
     "cspell": "^8.0.0",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
