--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "negotiator": "^0.6.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.4.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.8",
     "react": "^18",
